# WINGSV

./: .gitignore  .gitmodules  README.md  gradle.properties  keystore.properties.example  package-lock.json  package.json  settings.gradle.kts
.github/: FUNDING.yml
.github/scripts/: cleanup_old_patch_assets.py  find_previous_release_apk.py
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rustore_recommended_apps.json
app/src/main/cpp/: CMakeLists.txt  wings_xposed_native.cpp
app/src/main/proto/: wingsv.proto
app/src/main/res/drawable/: bg_power_button_off.xml  bg_power_button_on.xml  bg_search_field.xml  bg_service_state_warning.xml  bg_surface_card.xml  bg_theme_option_selected.xml  bg_update_badge.xml  bg_warning_confirm_continue_disabled.xml  bg_warning_confirm_continue_enabled.xml  bg_xray_routing_field.xml  bg_xray_routing_popup.xml  ic_about_app_info.xml  ic_apps.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_check_circle.xml  ic_chevron_right.xml  ic_close_circle.xml  ic_current_location.xml  ic_drag_handle.xml  ic_home.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_power.xml  ic_public.xml  ic_refresh.xml  ic_search.xml  (+10 more)
config/pmd/: pmd.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/app-updates-server/: README.md  mock-update-server.py  prepare-fixtures.sh
scripts/gen_wingsv_link/: README.md  gen_wingsv_link.py  requirements.txt
vpnhotspot-bridge/: build.gradle.kts
vpnhotspot-upstream-runtime/: build.gradle.kts
(+195 files in other folders)
